# quip-protocol

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  DOCKER.md  MINER_README.md  Mining.sh  README.md  SOLVE.md  blockchain_base.py  genesis_block.json  genesis_block_easy.json  genesis_block_hard.json  genesis_block_public.json  genesis_block_test.json  launch_network.py  pyproject.toml  quantum_blockchain.py  quantum_blockchain_network.py  quantum_blockchain_p2p.py  quip-network-node.service  quip-node.example.toml  quip.network.cpu.example.toml  quip.network.gpu.example.toml  quip.network.ibm_qaoa.example.toml  quip.network.ionq_qaoa.example.toml  quip.network.qpu.example.toml  quip_cli.py  reload.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
CPU/: __init__.py  cpu_miner.py  sa_filtered_miner.py  sa_miner.py  sa_sampler.py  worker.py
GPU/: METAL_README.md  __init__.py  base_cuda_sampler.py  cuda_gibbs.cu  cuda_gibbs_miner.py  cuda_gibbs_sa.py  cuda_kernel.py  cuda_miner.py  cuda_sa.cu  cuda_sa.py  cuda_sa_kernel.py  cuda_sa_sampler.py  gpu_miner.py  gpu_scheduler.py  gpu_utilization.py  metal_gibbs.metal  metal_gibbs_sa.py  metal_kernel_interface.py  metal_kernel_sampler.py  metal_kernel_sampler_parallel.py  metal_kernels.metal  metal_kernels_parallel.metal  metal_kernels_pure.metal  metal_miner.py  metal_sa.py  metal_sa_pure.py  metal_sampler.py  metal_sampler_optimized_chunks.py  metal_sampler_parallel.py  metal_scheduler.py  metal_splash.metal  metal_splash_sa.py  metal_utils.py  modal_miner.py  modal_sampler.py  sampler.py  sampler_utils.py  worker.py
QPU/: __init__.py  dwave_miner.py  dwave_sampler.py  qpu_miner.py  qpu_time_manager.py  worker.py
akash/: .env.example  Dockerfile.akash-cpu  Dockerfile.akash-cuda  README.md  admin_collect_ipfs.sh  build_akash_images.sh  close_deployments.sh  collect_ipfs_results.sh  deploy-cpu-ipfs.yaml  deploy-cpu.yaml  deploy-cuda-ipfs.yaml  deploy-cuda.yaml  deploy.sh  entrypoint-akash.sh  entrypoint-ipfs.sh  ipfs_cli.py  requirements-mining-cpu.txt  requirements-mining-cuda.txt  retrieve_results.sh
aws/: README_AWS_DEPLOYMENT.md  collect_results.sh  launch_all_fleets.sh  launch_cpu_fleet.sh  launch_cuda_fleet.sh  launch_metal_fleet.sh  setup_s3_output.sh  terminate_fleet.sh  user_data_cpu.sh  user_data_cuda.sh  user_data_metal.sh
benchmarks/: benchmark_quantum_pow.py  benchmark_results.json  gpu_benchmark_modal.py
docker/: Dockerfile.cpu  Dockerfile.cuda  Dockerfile.metal  README.md  TLS.md  build_all.sh  certbot-default.sh  docker-compose.local-gpu.yml  docker-compose.local.yml  docker-compose.mac.yml  docker-compose.yml  entrypoint-metal.sh  entrypoint.sh  quip-node.cpu.toml  quip-node.cuda.toml  test-rest-telemetry.sh  test_local.sh
docs/: rest-api.md  telemetry-indexer-spec.md
dwave/: __init__.py
dwave_topologies/: __init__.py  embedded_topology.py  embedding_loader.py
minertest/: AKASH.md  AWS.md  Dockerfile.cpu  Dockerfile.cuda  aws-userdata.sh  build_images.sh  entrypoint.sh  requirements-cpu.txt  requirements-cuda.txt
pyinstaller/: boot_network_node.py  build.sh  quip_network_node.spec
reference/: test_quantum_pow.py
shared/: address_utils.py  base_miner.py  beta_schedule.py  block.py  block_inventory.py  block_requirements.py  block_signer.py  block_store.py  block_synchronizer.py  blockchain_shared.py  certificate_manager.py  chacha8.py  connection_process.py  connection_worker.py  crypto_utils.py  energy_utils.py  event_loop.py  ipc_transport.py  ising_feeder.py  ising_model.py  listener_process.py  load_monitor.py  logging_config.py  miner.py  miner_service.py  miner_worker.py  network_node.py  node.py  node_client.py  nonce_prefilter.py  peer_ban_list.py  peer_scorer.py  pipe_sender.py  process_pool.py  quantum_proof_of_work.py  rate_limiter.py  rest_api.py  swim_detector.py  sync_messages.py  system_info.py  (+6 more)
systemd-linux/: README.md  install.sh  quip-network-node.service  quip-node.systemd.toml
tests/: _utils.py  chacha8_test_vectors.json  conftest.py  smoke_node_cpu_only.py  smoke_node_gpu_local.py  smoke_node_gpu_metal.py  smoke_node_gpu_modal.py  smoke_node_qpu.py  smoke_node_sa_gibbs.py  smoke_utilization_yielding.py  test_adapt_parameters.py  test_address_utils.py  test_block_inventory.py  test_block_signer.py  test_block_synchronizer.py  test_chacha8.py  (+62 more)
tutte/: Makefile  README.md  __init__.py  factorization.py  graph.py  polynomial.py  pyproject.toml  validation.py
tutte/benchmarks/: README.md  __init__.py  benchmark.py
tutte/cotree_dp/: __init__.py  combinatorics.py  dp.py  recognition.py  signatures.py  subgraph.py
tutte/data/: README.md
tutte/docs/: 00_motivation.md  01_rainbow_table_lookup.md  02_base_cases.md  03_disconnected_factorization.md  04_cut_vertex_factorization.md  05_1_find_and_partition_cells.md  05_2_theorem6_parallel_connection.md  05_3_edge_by_edge_addition.md  05_hierarchical_tiling.md  06_creation_expansion_join.md  07_cotree_dp.md  README.md
tutte/family_recognition/: __init__.py  constants.py  fingerprint.py  formulas.py  verification.py
tutte/graphs/: README.md  __init__.py  _treewidth_c.py  covering.py  k_join.py  minor.py  series_parallel.py  treewidth.py
tutte/logs/: __init__.py  event_log.py  event_types.py
tutte/lookup/: README.md  __init__.py  binary.py  bootstrap.py  core.py
tutte/matroids/: README.md  __init__.py  core.py  parallel_connection.py
tutte/proposals/: issues_cotree_dp.md
tutte/scripts/: visualize_tutte.py
tutte/synthesis/: README.md  __init__.py  algebraic.py  base.py  engine.py  hybrid.py  parallel.py  symmetric.py
tutte/tests/: README.md  __init__.py  benchmark_cotree_dp.py  conftest.py  test_benchmark_cotree_dp.py  test_benchmark_family_recognition.py  test_cotree_dp.py  test_family_recognition.py  test_integrate_cotree_dp.py  test_matroid.py  test_parallel.py  test_treewidth.py  test_tutte.py
(+190 files in other folders)
