[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quip-protocol"
version = "0.0.3"
description = "Quantum Proof-of-Work Blockchain Implementation"
readme = "README.md"
requires-python = ">=3.10"
# Base dependencies required for all modes
dependencies = [
    "dwave-ocean-sdk>=9.0.0,<10",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "click>=8.1.7",
    "tomli>=2.0.1; python_version<'3.11'",
    "hashsigs>=0.0.2",
    "blake3>=1.0.5",
    "aioquic>=1.3.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
# CPU mode - lightweight, no GPU dependencies
cpu = []

# CUDA mode - NVIDIA GPU support (matches PyTorch CUDA 12)
cuda = [
    "cupy-cuda12x>=13.0.0",
    "nvidia-ml-py>=12.0.0",
]

# Metal mode - Apple Silicon GPU support
metal = [
    "pyobjc-framework-Metal",
    "pyobjc-framework-MetalPerformanceShaders",
]

# Full installation with all GPU backends + visualization
full = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "cupy-cuda12x>=13.0.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "nvidia-ml-py>=12.0.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "pyobjc-framework-Metal; sys_platform == 'darwin'",
    "pyobjc-framework-MetalPerformanceShaders; sys_platform == 'darwin'",
    "matplotlib>=3.6.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "acme>=2.0.0",
    "josepy>=1.13.0",
]

dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
quip-network-node = "quip_cli:network_node_main"
quip-network-simulator = "quip_cli:network_simulator_main"

[tool.setuptools]
py-modules = ["quip_cli"]

[tool.setuptools.packages.find]
include = ["shared*", "dwave_topologies*", "CPU*", "GPU*", "QPU*"]

[tool.setuptools.package-data]
dwave_topologies = ["topologies/*.json.gz", "embeddings/*.json.gz"]
GPU = ["*.cu", "*.metal"]
"*" = ["genesis_block_public.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
