[metadata]
name = quip-protocol
version = 0.1.0

[options]
packages = find:
py_modules = blockchain_base, quantum_blockchain, quantum_blockchain_network, quantum_blockchain_p2p, launch_network, quip_cli
python_requires = >=3.10
include_package_data = True
# install_requires is read from requirements.txt in setup.py

[options.packages.find]
include = CPU, GPU, QPU, shared
exclude = benchmarks, reference, venv

[options.entry_points]
console_scripts =
    quip-demo = quantum_blockchain:main
    quip-p2p = quantum_blockchain_p2p:main
    quip-cpu-miner = CPU.cpu_miner:cli
    quip-gpu-miner = GPU.gpu_miner:run_with_modal
    quip-qpu-miner = QPU.qpu_miner:cli
    quip-launch = launch_network:main
    quip-network-node = quip_cli:network_node_main
    quip-network-simulator = quip_cli:network_simulator_main

