[project]
name = "tutte"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "sympy>=1.12",
    "dwave-networkx>=0.8.0",
    "scipy>=1.10",
    "mpmath>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
viz = [
    "flask>=3.0",
]